--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -560,19 +560,19 @@
                             <span class="tooltiptext">Voltage</span>
                             <svg class="lightning" width="59.63" height="103.33">
                                 <defs>
-                                    <linearGradient id="left-to-right" x1="29" y1="100" x2="29"
+                                    <linearGradient id="gradient-fill" x1="29" y1="100" x2="29"
                                         gradientUnits="userSpaceOnUse">
                                         <stop offset="0" stop-color="#2959a8">
-                                            <animate dur="1s" attributeName="offset" fill="freeze" from="0" to="0.5"
+                                            <animate id="gradient-point1" dur="1s" attributeName="offset" fill="freeze" from="0" to="0"
                                                 keySplines=" 0.0 0.4 0.1 1" keyTimes="0;1" calcMode="spline" />
                                         </stop>
                                         <stop offset="0" stop-color="#2959a8" stop-opacity="0.1">
-                                            <animate dur="1s" attributeName="offset" fill="freeze" from="0" to="0.5"
+                                            <animate id="gradient-point1" dur="1s" attributeName="offset" fill="freeze" from="0" to="0"
                                                 keySplines=" 0.0 0.4 0.1 1" keyTimes="0;1" calcMode="spline" />
                                         </stop>
                                     </linearGradient>
                                 </defs>
-                                <polygon fill="url(#left-to-right)"
+                                <polygon
                                     points="58.67 0.5 18.67 0.5 6.67 40.5 0.67 60.5 16.67 60.5 4.67 100.5 32.67 60.5 46.67 40.5 30.67 40.5 58.67 0.5"
                                     style="stroke:none;stroke-miterlimit:10" />
                             </svg>
