--- a/raon-control/test/light.html
+++ b/raon-control/test/light.html
@@ -15,7 +15,7 @@
                 </stop>
             </linearGradient>
         </defs>
-        <polygon id="poly"
+        <polygon id="poly" fill="url(#left-to-right)"
             points="58.67 0.5 18.67 0.5 6.67 40.5 0.67 60.5 16.67 60.5 4.67 100.5 32.67 60.5 46.67 40.5 30.67 40.5 58.67 0.5"
             style="stroke:none;stroke-miterlimit:10" />
     </svg>
@@ -55,25 +55,30 @@
     // }, 2000);
 
     function setPoint() {
-        id.setAttribute('fill', 'url(#left-to-right)');
+        
+        let data = document.getElementById('point').value;
+
+        stop1.setAttribute('from', current);
+        stop1.setAttribute('to', data);
+
+        stop2.setAttribute('from', current);
+        stop2.setAttribute('to', data);
+
+        // id.setAttribute('fill', 'url(#left-to-right)');
         stop1.beginElement();
-        stop2.beginElement();
+        // stop2.beginElement();
+
+        current = data;
     }
 
     window.onload = function () {
 
-        let data = document.getElementById('point').value;
-
-        stop1.setAttribute('from', '0.0');
-        stop1.setAttribute('to', '0.5');
-
-        stop2.setAttribute('from', '0.0');
-        stop2.setAttribute('to', '0.5');
 
 
 
-        console.log(current, data)
-        current = data;
+
+        // console.log(current, data)
+        // current = data;
         // setPoint();
     }
 </script>
