--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -619,7 +619,7 @@
                         <div class="data-value" id="level-4k" style="position: relative; left: 25px; top:40px">0</div>
                     </div>
                     <div style="width:30%; height:100%">
-                        <svg id="level-point4k" width="5" height="6" style="position: absolute; top:15px; left:230px;">
+                        <svg id="level-point4k" width="5" height="6" style="position: absolute; top:124px; left:230px; transition:top 1s">
                             <polygon points="5 3 0 0 0 6 5 3" style="fill:#2baae2" />
                         </svg>
                         <div class="level-bar">
@@ -2332,18 +2332,23 @@
         // 2K, 4k Level
         var levelSplit2kId = document.getElementById('level-bar-split2k');
         var levelValue2kId = document.getElementById('level-2k');
+        // var levelPoint2kId = document.getElementById('level-point2k');
+
         var levelSplit4kId = document.getElementById('level-bar-split4k');
         var levelValue4kId = document.getElementById('level-4k');
+        var levelPoint4kId = document.getElementById('level-point4k')
 
         var level2kId = setInterval(function () {
             let splitHeight = Math.floor(Math.random() * 118);
             levelSplit2kId.style.height = splitHeight + 'px';
+            // levelPoint2kId.style.top = 15 + splitHeight + 'px';
 
             let level = Math.floor(-120 / 118 * splitHeight + 120);
             levelValue2kId.innerText = level;
 
             splitHeight = Math.floor(Math.random() * 118);
             levelSplit4kId.style.height = splitHeight + 'px';
+            levelPoint4kId.style.top = 14 + splitHeight + 'px';
 
             level = Math.floor(-120 / 118 * splitHeight + 120);
             levelValue4kId.innerText = level;
