--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -596,6 +596,9 @@
                         <div class="data-value" id="level-2k" style="position: relative; left: 25px; top:40px">0</div>
                     </div>
                     <div style="width:30%; height:100%">
+                        <svg id="level-point2k" width="5" height="6" style="position: absolute; top:124px; left:230px; transition:top 1s">
+                            <polygon points="5 3 0 0 0 6 5 3" style="fill:#2baae2" />
+                        </svg>
                         <div class="level-bar">
                             <svg width="14" height="118" style="position:absolute">
                                 <defs>
@@ -2332,7 +2335,7 @@
         // 2K, 4k Level
         var levelSplit2kId = document.getElementById('level-bar-split2k');
         var levelValue2kId = document.getElementById('level-2k');
-        // var levelPoint2kId = document.getElementById('level-point2k');
+        var levelPoint2kId = document.getElementById('level-point2k');
 
         var levelSplit4kId = document.getElementById('level-bar-split4k');
         var levelValue4kId = document.getElementById('level-4k');
@@ -2341,7 +2344,7 @@
         var level2kId = setInterval(function () {
             let splitHeight = Math.floor(Math.random() * 118);
             levelSplit2kId.style.height = splitHeight + 'px';
-            // levelPoint2kId.style.top = 15 + splitHeight + 'px';
+            levelPoint2kId.style.top = 14 + splitHeight + 'px';
 
             let level = Math.floor(-120 / 118 * splitHeight + 120);
             levelValue2kId.innerText = level;
