--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -523,24 +523,26 @@
                         <polyline class="boxEdgeStyle" points="0.5 151.5 0.5 161.5 10.5 161.5" />
                     </svg>
                     <div style="width: 50%; height: 100%; position: relative;">
-                        <svg width="131" height="137">
-                            <polygon
-                                points="78.19 93.42 53.03 93.42 40.45 115.2 53.03 136.99 78.19 136.99 90.77 115.2 78.19 93.42"
-                                style="fill:#014161" />
-                            <polygon
-                                points="118.64 70.06 93.48 70.06 80.91 91.85 93.48 113.64 118.64 113.64 131.22 91.85 118.64 70.06"
-                                style="fill:#3db54a;opacity:0.8" />
-                            <polygon
-                                points="118.67 23.36 93.51 23.36 80.93 45.14 93.51 66.93 118.67 66.93 131.24 45.14 118.67 23.36"
-                                style="fill:#3db54a;opacity:0.8" />
-                            <polygon points="78.19 0 53.03 0 40.45 21.79 53.03 43.57 78.19 43.57 90.77 21.79 78.19 0"
+                        <svg width="131" height="137" style="position: relative; left:25px; top:11px;">
+                            <polygon points="77.95 0 52.95 0 40.45 21.65 52.95 43.3 77.95 43.3 90.45 21.65 77.95 0"
                                 style="fill:#ed2224;opacity:0.8" />
+                            <text class="ioc-text" transform="translate(49.89 24.43)">Module</text>
                             <polygon
-                                points="37.74 70.07 12.58 70.07 0 91.86 12.58 113.64 37.74 113.64 50.31 91.86 37.74 70.07"
-                                style="fill:#014161" />
-                            <polygon
-                                points="37.74 23.36 12.58 23.36 0 45.14 12.58 66.93 37.74 66.93 50.31 45.14 37.74 23.36"
+                                points="118.43 23.36 93.43 23.36 80.93 45.01 93.43 66.66 118.43 66.66 130.93 45.01 118.43 23.36"
                                 style="fill:#3db54a;opacity:0.8" />
+                            <text class="ioc-text" transform="translate(91.49 47.79)">Timing</text>
+                            <polygon
+                                points="118.48 69.92 93.33 69.92 80.75 91.71 93.33 113.5 118.48 113.5 131.06 91.71 118.48 69.92"
+                                style="fill:#3db54a;opacity:0.8" />
+                            <text class="ioc-text" transform="translate(97.48 94.49)">FPS</text>
+                            <polygon
+                                points="77.95 93.42 52.95 93.42 40.45 115.07 52.95 136.72 77.95 136.72 90.45 115.07 77.95 93.42"
+                                style="fill:#014161" />
+                            <polygon points="37.5 70.07 12.5 70.07 0 91.72 12.5 113.37 37.5 113.37 50 91.72 37.5 70.07"
+                                style="fill:#014161" />
+                            <polygon points="37.5 23.36 12.5 23.36 0 45.01 12.5 66.66 37.5 66.66 50 45.01 37.5 23.36"
+                                style="fill:#3db54a;opacity:0.8" />
+                            <text class="ioc-text" transform="translate(14.29 47.79)">LLRF</text>
                         </svg>
                     </div>
 
@@ -596,7 +598,8 @@
                         <div class="data-value" id="level-2k" style="position: relative; left: 25px; top:40px">0</div>
                     </div>
                     <div style="width:30%; height:100%">
-                        <svg id="level-point2k" width="5" height="6" style="position: absolute; top:124px; left:230px; transition:top 1s">
+                        <svg id="level-point2k" width="5" height="6"
+                            style="position: absolute; top:124px; left:230px; transition:top 1s">
                             <polygon points="5 3 0 0 0 6 5 3" style="fill:#2baae2" />
                         </svg>
                         <div class="level-bar">
@@ -622,7 +625,8 @@
                         <div class="data-value" id="level-4k" style="position: relative; left: 25px; top:40px">0</div>
                     </div>
                     <div style="width:30%; height:100%">
-                        <svg id="level-point4k" width="5" height="6" style="position: absolute; top:124px; left:230px; transition:top 1s">
+                        <svg id="level-point4k" width="5" height="6"
+                            style="position: absolute; top:124px; left:230px; transition:top 1s">
                             <polygon points="5 3 0 0 0 6 5 3" style="fill:#2baae2" />
                         </svg>
                         <div class="level-bar">
